some minor fixes
- show detailed error when listening data is hidden
- dont cut off month/day names in moment charts
- extended color set for artist timeline chart

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,7 +8,7 @@ body {
   margin: 0;
 }
 
-a {
+a.regular-text {
   color: inherit;
   text-decoration: none;
 }
